PharmaDemo/src/objects/Sample__c.object
<CustomObject>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Received__c - Left__c - Transfer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <formula>IMAGE( 
&apos;http://chart.apis.google.com/chart?cht=bhg&amp;chs=200x100&amp;chd=t:&apos; &amp; 
TEXT(  Reorder_Level__c ) &amp; 
&apos;,&apos; &amp; 
TEXT (Balance__c   ) &amp; 
&apos;&amp;chds=0,&apos; &amp; 
&apos;&amp;chxt=y&amp;chxl=0:|Balance|Reorder&amp;chco=FF0000|00FF00&amp;chf=bg,s,efefef20&apos;, &apos;Stock Indicator&apos; , 100, 200 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left__c</fullName>
        <label>Left with Customer</label>
        <summarizedField>Sample_Item__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Sample_Item__c.Status__c</field>
            <operation>equals</operation>
            <value>Left</value>
        </summaryFilterItems>
        <summaryForeignKey>Sample_Item__c.Sample__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Received__c</fullName>
        <label>Received from Distribution</label>
        <summarizedField>Sample_Inventory__c.Qty__c</summarizedField>
        <summaryFilterItems>
            <field>Sample_Inventory__c.Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </summaryFilterItems>
        <summaryForeignKey>Sample_Inventory__c.Sample__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reorder_Level__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Reorder Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer__c</fullName>
        <label>Transferred from Colleagues</label>
        <summarizedField>Sample_Inventory__c.Qty__c</summarizedField>
        <summaryFilterItems>
            <field>Sample_Inventory__c.Status__c</field>
            <operation>equals</operation>
            <value>Transferred</value>
        </summaryFilterItems>
        <summaryForeignKey>Sample_Inventory__c.Sample__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Sample</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cost__c</columns>
        <columns>Left__c</columns>
        <columns>Balance__c</columns>
        <columns>Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sample Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Samples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>